--- a/index.html
+++ b/index.html
@@ -137,16 +137,13 @@
           </article>
 
         </div>
-
-
-
       </div>
     </section>
   </main>
-  <!-- <footer>
+  <footer>
     <div>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </div>
     <div>Coded by <a href="https://www.instagram.com/zmyn.17/" target="_blank">Zamin Ahmadi</a>.</div>
-  </footer> -->
+  </footer>
   <script src="./script.js"></script>
 </body>
 </html>
