--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="card__content">
               <div class="card__header">
                 <p class="card__title"></p>
-                <img src="./images/icon-ellipsis.svg" alt="...">
+                <img src="./images/icon-ellipsis.svg" alt="..." class="dots">
               </div>
               <div class="card__numbers">
                 <h1 class="card__hours"></h1>
@@ -63,7 +63,7 @@
             <div class="card__content">
               <div class="card__header">
                 <p class="card__title"></p>
-                <img src="./images/icon-ellipsis.svg" alt="...">
+                <img src="./images/icon-ellipsis.svg" alt="..." class="dots">
               </div>
               <div class="card__numbers">
                 <h1 class="card__hours"></h1>
@@ -79,7 +79,7 @@
             <div class="card__content">
               <div class="card__header">
                 <p class="card__title"></p>
-                <img src="./images/icon-ellipsis.svg" alt="...">
+                <img src="./images/icon-ellipsis.svg" alt="..." class="dots">
               </div>
               <div class="card__numbers">
                 <h1 class="card__hours"></h1>
@@ -95,7 +95,7 @@
             <div class="card__content">
               <div class="card__header">
                 <p class="card__title"></p>
-                <img src="./images/icon-ellipsis.svg" alt="...">
+                <img src="./images/icon-ellipsis.svg" alt="..." class="dots">
               </div>
               <div class="card__numbers">
                 <h1 class="card__hours"></h1>
@@ -111,7 +111,7 @@
             <div class="card__content">
               <div class="card__header">
                 <p class="card__title"></p>
-                <img src="./images/icon-ellipsis.svg" alt="...">
+                <img src="./images/icon-ellipsis.svg" alt="..." class="dots">
               </div>
               <div class="card__numbers">
                 <h1 class="card__hours"></h1>
@@ -127,7 +127,7 @@
             <div class="card__content">
               <div class="card__header">
                 <p class="card__title"></p>
-                <img src="./images/icon-ellipsis.svg" alt="...">
+                <img src="./images/icon-ellipsis.svg" alt="..." class="dots">
               </div>
               <div class="card__numbers">
                 <h1 class="card__hours"></h1>
